<resources>
    <string name="app_name">YEOMAN</string>
    <string name="skip">Skip</string>
    <string name="next">next</string>
    <string name="start">GOT IT</string>
    <string name="mobile_number_label">Enter Mobile Number</string>

    <!-- Authentication Page -->
    <string name="india_code">+91</string>
    <string name="button_continue">continue</string>
    <string name="button_verify">verify</string>
    <string name="button_resend_otp">resend otp</string>
    <string name="welcome_text">Welcome to YEOMEN</string>
    <string name="welcome_note">helping you to find the best wage</string>
    <string name="full_name">FirstName</string>
    <string name="last_name">LastName</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Date of Birth</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="contact_lenses">ContactLens</string>
    <string name="privacy_para">Acuvue collects your personal information to enable us to administer and promote the Offer. Your PI may be provided to third parties assisting in the conduct of the Offer, including our web site hosting service provider, suppliers and deliverers. Your PI will be processed and stored by our web site hosting service provider in Japan, if the PI requested is not provided you may not participate in the Offer. By participating int the Offer you consent to the use of your PI. Subject also to your express consent, which you may give us by opting in below, we may send you specially offers and updates about Acuvue products. You have the tight to access update and request correction ofyou PI, and such request as well as any enquiries or complaints about how we handle your PI contained in our Privacy Policy   </string>
    <string name="privacy_para2">By clicking submit you agree to the Terms and Conditions and the processing of my PI and as described in Privacy Notice above, You will also agree to receive exclusive offers, news and promotional material about ACUVUE products.</string>
    <string name="privacy_checkbox1">I agree to the Terms and Conditions and the Privacy Notice above.</string>
    <string name="privacy_notice">Terms and Conditions</string>

    <string name="phone_number">Mobile Number</string>
    <string name="state">State</string>
    <string name="fileupload">File Upload</string>
    <string name="PinCode">pincode</string>
    <string name="village">Village</string>
    <string name="userrole">Role (cannot be changed in future)</string>
    <string name="fullname">Name</string>
    <string name="aadhar">AadharNumber</string>
    <string name="search">Search</string>
    <string name="Select_date">Select Date</string>
    <string name="Book">Book</string>
    <string name="name">Mnaikyapavan</string>
    <string name="absActTitle">Apply for Leave</string>

    <string name="applyLeaveButton">Apply Leave</string>
    <string name="empType">Employement Type</string>

    <string name="unskilledType">Unskilled Type</string>

    <string name="mailText">We are always with you. Please tell your problem, we will be doing what ever nesesary to over come your problem
    \n please Mail us your problem to our mail
    \n Our Representative will contact you.</string>

    <string-array name="userroles">
        <item>Select</item>
        <item>Farmer</item>
        <item>Labour</item>
        <item>Village Admin</item>
    </string-array>
    <string-array name="empTypes">
        <item>Skilled Labour</item>
        <item>Unskilled Labour</item>
        <item>Weekend Labour</item>
    </string-array>

    <string-array name="unskilledTypes">
        <item>Ploughing</item>
        <item>Sowing seed</item>
        <item>Weeding</item>
        <item>Ginning</item>
        <item>Showeling-palm</item>
        <item>Others</item>
    </string-array>
    <string-array name="gender">
        <item>Select</item>
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string-array name="VillageNames">
        <item>Select Village Name</item>
        <item>prathipadu</item>
        <item>Jaggampeta</item>
        <item>Kakinada</item>
        <item>Rajamundry</item>
        <item>Tuni</item>
    </string-array>
    <string-array name="tab_A">
        <item>Item 1A</item>
        <item>Item 1B</item>
        <item>Item 1C</item>
        <item>Item 1D</item>
        <item>Item 1E</item>
        <item>Item 1F</item>
        <item>Item 1G</item>
        <item>Item 1H</item>
        <item>Item 1I</item>
        <item>Item 1J</item>
        <item>Item 1K</item>
        <item>Item 1L</item>
        <item>Item 1M</item>
        <item>Item 1N</item>
        <item>Item 1O</item>
        <item>Item 1P</item>
        <item>Item 1Q</item>
        <item>Item 1R</item>
        <item>Item 1S</item>
        <item>Item 1T</item>
    </string-array>

    <string-array name="tab_B">
        <item>Item 2A</item>
        <item>Item 2B</item>
        <item>Item 2C</item>
        <item>Item 2D</item>
        <item>Item 2E</item>
        <item>Item 2F</item>
        <item>Item 2G</item>
        <item>Item 2H</item>
        <item>Item 2I</item>
        <item>Item 2J</item>
        <item>Item 2K</item>
        <item>Item 2L</item>
        <item>Item 2M</item>
        <item>Item 2N</item>
        <item>Item 2O</item>
        <item>Item 2P</item>
        <item>Item 2Q</item>
        <item>Item 2R</item>
        <item>Item 2S</item>
        <item>Item 2T</item>
    </string-array>

    <string-array name="tab_C">
        <item>Item 3A</item>
        <item>Item 3B</item>
        <item>Item 3C</item>
        <item>Item 3D</item>
        <item>Item 3E</item>
        <item>Item 3F</item>
        <item>Item 3G</item>
        <item>Item 3H</item>
        <item>Item 3I</item>
        <item>Item 3J</item>
        <item>Item 3K</item>
        <item>Item 3L</item>
        <item>Item 3M</item>
        <item>Item 3N</item>
        <item>Item 3O</item>
        <item>Item 3P</item>
        <item>Item 3Q</item>
        <item>Item 3R</item>
        <item>Item 3S</item>
        <item>Item 3T</item>
    </string-array>

</resources>
