<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditProfileDetailActivity">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/edit"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/fabEdit"
            android:layout_margin="30dp"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:id="@+id/profile_layout1">



            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="10dp"
                android:background="@drawable/circlebg"
                android:src="@drawable/leaf"/>

        </RelativeLayout>

        <!--Editable layout -->


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/visible_editprofile"
            android:layout_below="@id/profile_layout1">


            <ScrollView
                android:id="@+id/scrollview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fullname"
                            style="@style/form_text_view"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="1dp"
                            android:text="*"
                            style="@style/form_esterik" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/fullName"
                        style="@style/form_edit_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/form_edit_text" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/form_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender" />

                        <TextView
                            style="@style/form_esterik"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="1dp"
                            android:text="*" />

                    </LinearLayout>

                    <Spinner
                        android:id="@+id/gender"
                        style="@style/form_edit_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/form_edit_text"
                        android:entries="@array/gender" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/form_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/PinCode" />

                        <TextView
                            style="@style/form_esterik"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="1dp"
                            android:text="*" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/pincode"
                        style="@style/form_edit_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/form_edit_text"
                        android:inputType="phone"
                        android:maxLength="10" />
                <LinearLayout
                    android:id="@+id/info_Address1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">



                <TextView
                        style="@style/form_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address" />
                    <TextView
                        style="@style/form_esterik"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="1dp"
                        android:text="*" />
                </LinearLayout>

                    <EditText
                        android:id="@+id/address"
                        style="@style/form_edit_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/form_edit_text"
                        android:inputType="textMultiLine"
                        android:maxLines="10"
                        android:minLines="6" />

                    <LinearLayout
                        android:id="@+id/info_Image"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/form_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/village" />

                        <TextView
                            style="@style/form_esterik"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="1dp"
                            android:text="*" />


                    </LinearLayout>

                    <EditText
                        android:id="@+id/city"
                        style="@style/form_edit_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/form_edit_text" />

                    <LinearLayout
                        android:id="@+id/info_Image1"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/form_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/state" />

                        <TextView
                            style="@style/form_esterik"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="1dp"
                            android:text="*" />


                    </LinearLayout>


                    <EditText
                        android:id="@+id/state"
                        style="@style/form_edit_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/form_edit_text" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/form_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/aadhar" />

                        <TextView
                            style="@style/form_esterik"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="1dp"
                            android:text="*" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/AadharNumber"
                        style="@style/form_edit_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:background="@drawable/form_edit_text" />



                    <Button
                        android:id="@+id/submitBTN1"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_gravity="center"
                        android:background="#B7C1CB"
                        android:padding="20dp"
                        android:textAllCaps="false"
                        android:text="@string/submit"
                        android:visibility="invisible"
                        android:textColor="@android:color/white" />


                </LinearLayout>


            </ScrollView>


        </RelativeLayout>
    </RelativeLayout>
</layout>